Add info boxes on Portfolio Details Page (#274)
* added info box to score and corrected color
* added info button for Risk section
* added info boxes for dividends section
* added info boxes for analytics section
* added info boxes for backtesting
* added explanation for correlation
* added left margin for info button
* update snapshot
* made tooltip text larger
* center icon horizontally

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -50,11 +50,15 @@
   "portfolio.details.analystSubtext": "Here are the scores of your top 5 positions. Their score is based on professional analysts buy, hold and sell recommendations.",
   "portfolio.details.analytics": "7. Analytics",
   "portfolio.details.analytics.standardDeviation": "Standard Deviation of the entire portfolio:",
+  "portfolio.details.analytics.standardDeviation.infoButton": "A standard deviation is a statistic that measures the dispersion of a dataset relative to its mean. The greater the standard deviation of securities, the greater the variance between each price and the mean, which shows a larger price range",
+  "portfolio.details.analytics.correlation": "Correlation",
   "portfolio.details.analytics.correlations.chartTitle": "Correlations of your Top 10 Stocks:",
   "portfolio.details.analytics.correlations.negative": "Negative correlation",
   "portfolio.details.analytics.correlations.positive": "Positive correlation",
   "portfolio.details.analytics.correlations.noData": "No Data",
+  "portfolio.details.analytics.correlations.info": "Correlation, in the finance and investment industries, is a statistic that measures the degree to which two securities move in relation to each other. The correlation coefficient's values range between -1.0 and 1.0. A perfect positive correlation means that the correlation coefficient is exactly 1. This implies that as one security moves, either up or down, the other security moves in lockstep, in the same direction. A perfect negative correlation means that two assets move in opposite directions, while a zero correlation implies no linear relationship at all.",
   "portfolio.details.analytics.debtEquity": "Debt Equity",
+  "portfolio.details.analytics.debtEquity.infoButton": "The debt-to-equity (D/E) ratio is used to evaluate a company's financial leverage and is calculated by dividing a company’s total liabilities by its shareholder equity.",
   "portfolio.details.analytics.debtEquity.title": "Debt Equity Ratio of your Top 10 Stocks:",
   "portfolio.details.analytics.debtEquity.total": "Debt Equity Ratio of the entire portfolio:",
   "portfolio.details.emptyPortfolio": "This portfolio does not contain any stocks.",
@@ -74,12 +78,10 @@
   "portfolio.details.backtesting.dateHelperText": "Please select a valid time span and try again.",
   "portfolio.details.backtesting.errorMessage": "There was an error while loading the Backtesting data.",
   "portfolio.details.backtesting.updateButton": "Update",
-  "portfolio.details.backtesting.bestChangeDescription": "This is a placeholder description for bestChange (translation key)",
-  "portfolio.details.backtesting.worstChangeDescription": "This is a placeholder description for worstChange (translation key)",
-  "portfolio.details.backtesting.mddDescription": "This is a placeholder description for mdd (translation key)",
-  "portfolio.details.backtesting.standardDeviationDescription": "This is a placeholder description for standardDeviation (translation key)",
-  "portfolio.details.backtesting.sharpeRatioDescription": "This is a placeholder description for sharpeRatio(translation key)",
-  "portfolio.details.backtesting.cagrDescription": "This is a placeholder description for cagr (translation key)",
+  "portfolio.details.backtesting.bestChangeInfo": "This was the best annual change over the selected period.",
+  "portfolio.details.backtesting.worstChangeInfo": "This was the worst annual change over the selected period.",
+  "portfolio.details.backtesting.mddInfo": "A maximum drawdown (MDD) is the maximum observed loss from a peak to a trough of a portfolio, before a new peak is attained. Maximum drawdown is an indicator of downside risk over a specified time period.",
+  "portfolio.details.backtesting.cagrInfo": "Compound annual growth rate (CAGR) is the rate of return that would be required for an investment to grow from its beginning balance to its ending balance, assuming the profits were reinvested at the end of each year of the investment’s lifespan.",
   "cancel": "Cancel",
   "submit": "Submit",
   "shell.email": "Email",
