Fetch performance data for chart from API.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -40,6 +40,7 @@
   "portfolio.details.divPayout": "Dividend Payout Ratio",
   "portfolio.details.nextDate": "Next Payout Date",
   "portfolio.details.emptyKeyFigures": "No information available yet",
+  "portfolio.details.emptyPerformance": "Performance chart unavailable",
   "portfolio.details.analytics.volatility.vsMarket": "Portfolio Volatility vs. Market",
   "portfolio.details.analytics.volatility.total": "Portfolio Beta / Volatility of the entire portfolio:",
   "portfolio.details.analytics.volatility.marketAvg": "Market Average",
@@ -82,6 +83,7 @@
   "portfolio.details.backtesting.worstChangeInfo": "This was the worst annual change over the selected period.",
   "portfolio.details.backtesting.mddInfo": "A maximum drawdown (MDD) is the maximum observed loss from a peak to a trough of a portfolio, before a new peak is attained. Maximum drawdown is an indicator of downside risk over a specified time period.",
   "portfolio.details.backtesting.cagrInfo": "Compound annual growth rate (CAGR) is the rate of return that would be required for an investment to grow from its beginning balance to its ending balance, assuming the profits were reinvested at the end of each year of the investment’s lifespan.",
+  "portfolio.performance.errorMessage": "Loading portfolio performance failed.",
   "cancel": "Cancel",
   "submit": "Submit",
   "shell.email": "Email",
