large volatility changed

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -205,13 +205,13 @@
   "analyser.details.Volatility.TreynorRatio.infoButton": "The Treynor ratio is a risk/return measure that allows investors to adjust a portfolio's returns for systematic risk. A higher Treynor ratio result means a portfolio is a more suitable investment.",
   "analyser.details.Volatility.VolatilityChart": "Volatility analysis",
   "analyser.details.Volatility.CompanyShare": "Company share compared to the overall market over benchmark",
-  "analyser.details.Leverage.DebtLevel": "Debt Level: ",
-  "analyser.details.Leverage.DebtLevel.infoButton": "Debt Level information",
+  "analyser.details.Leverage.DebtLevel": "Debt Ratio: ",
+  "analyser.details.Leverage.DebtLevel.infoButton": "Debt Ratio information",
   "analyser.details.Leverage.DebtCoverage": "Debt Coverage by operating cash flow: ",
   "analyser.details.Leverage.DebtCoverage.infoButton": "Debt Coverage by operating cash flow information",
   "analyser.details.Leverage.InterestCoverage": "Interest Coverage: ",
   "analyser.details.Leverage.InterestCoverage.infoButton": "Interest Coverage information",
-  "analyser.details.Leverage.DebtDevelopment": "Debt Development: ",
+  "analyser.details.Leverage.DebtDevelopment": "Debt to Equity Development: ",
   "stock.symbol": "Symbol",
   "stock.name": "Company",
   "stock.lastPrice": "Last Price",
