--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -199,6 +199,7 @@
   "analyser.details.RiskHeader": "3. Risks",
   "analyser.details.Volatility.BetaFactor": "Beta Faktor: ",
   "analyser.details.Volatility.BetaFactor.infoButton": "Beta measures the expected move in a stock relative to movements in the overall market. A beta greater than 1.0 suggests that the stock is more volatile than the broader market, and a beta less than 1.0 indicates a stock with lower volatility.",
+  "analyser.details.Volatility.BetaFactor.ErrorMessage": " doesn't share Beta Faktor.",
   "analyser.details.Volatility.SharpeRatio": "Sharpe Ratio: ",
   "analyser.details.Volatility.SharpeRatio.infoButton": "The Sharpe ratio adjusts a portfolio’s past performance—or expected future performance—for the excess risk that was taken by the investor. A high Sharpe ratio is good when compared to similar portfolios or funds with lower returns.",
   "analyser.details.Volatility.TreynorRatio": "Treynor Ratio: ",
@@ -212,6 +213,7 @@
   "analyser.details.Leverage.InterestCoverage": "Interest Coverage: ",
   "analyser.details.Leverage.InterestCoverage.infoButton": "Interest Coverage information",
   "analyser.details.Leverage.DebtDevelopment": "Debt to Equity Development: ",
+  "analyser.details.Leverage.ErrorMessage": " doesn't share Debt Level.",
   "stock.symbol": "Symbol",
   "stock.name": "Company",
   "stock.lastPrice": "Last Price",
