--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -2,13 +2,13 @@
   "portfolio": "Portfolio",
   "portfolio.details.editPortfolio": "Edit Portfolio",
   "portfolio.details.cannotEditPortfolio": "Cannot edit real portfolio",
-  "portfolio.details.summaryHeader": "1. Summary",
-  "portfolio.details.stockChartSeries": "Total Performance",
+  "portfolio.details.summaryHeader": "Summary",
   "portfolio.dialog.edit.title": "Edit portfolio positions",
   "portfolio.dialog.edit.text": "Here you can adjust the positions of your portfolio.",
   "portfolio.details.stock": "Stock",
   "portfolio.details.price": "Price",
   "portfolio.details.amount": "Amount",
+  "portfolio.details.perShare": "Per share",
   "portfolio.details.discardChanges": "Discard changes",
   "portfolio.details.saveChanges": "Save changes",
   "portfolio.details.score": "Score",
@@ -18,7 +18,6 @@
   "portfolio.details.totalValue": "Total Value",
   "portfolio.details.totalReturn": "Total",
   "portfolio.details.holding": "Holding",
-  "portfolio.details.perShare": "Per share",
   "portfolio.details.sharpe": "Sharpe Ratio: ",
   "portfolio.details.treynor": "Treynor Ratio: ",
   "portfolio.details.warnings.country0": "Very low country diversification",
@@ -31,11 +30,11 @@
   "portfolio.details.countries": "Countries",
   "portfolio.details.segments": "Segments",
   "portfolio.details.currencies": "Currencies",
-  "portfolio.details.positionsTitle": "2. Positions",
+  "portfolio.details.positionsTitle": "Positions",
   "portfolio.details.viewMore": "view more",
-  "portfolio.details.risk": "3. Risk Analysis",
-  "portfolio.details.keyfigures": "4. Key Figures",
-  "portfolio.details.dividends": "5. Dividends",
+  "portfolio.details.risk": "Risk Analysis",
+  "portfolio.details.keyfigures": "Key Figures",
+  "portfolio.details.dividends": "Dividends",
   "portfolio.details.divYield": "Dividend Yield",
   "portfolio.details.divPayout": "Dividend Payout Ratio",
   "portfolio.details.nextDate": "Next Payout Date",
@@ -46,24 +45,20 @@
   "portfolio.details.analytics.volatility.myPortfolio": "My Portfolio",
   "portfolio.details.from": "From",
   "portfolio.details.to": "To",
-  "portfolio.details.analyst": "6. Analysts",
+  "portfolio.details.analyst": "Analysts",
   "portfolio.details.analystSubtext": "Here are the scores of your top 5 positions. Their score is based on professional analysts buy, hold and sell recommendations.",
-  "portfolio.details.analytics": "7. Analytics",
+  "portfolio.details.analytics": "Analytics",
   "portfolio.details.analytics.standardDeviation": "Standard Deviation of the entire portfolio:",
-  "portfolio.details.analytics.standardDeviation.infoButton": "A standard deviation is a statistic that measures the dispersion of a dataset relative to its mean. The greater the standard deviation of securities, the greater the variance between each price and the mean, which shows a larger price range",
-  "portfolio.details.analytics.correlation": "Correlation",
   "portfolio.details.analytics.correlations.chartTitle": "Correlations of your Top 10 Stocks:",
   "portfolio.details.analytics.correlations.negative": "Negative correlation",
   "portfolio.details.analytics.correlations.positive": "Positive correlation",
   "portfolio.details.analytics.correlations.noData": "No Data",
-  "portfolio.details.analytics.correlations.info": "Correlation, in the finance and investment industries, is a statistic that measures the degree to which two securities move in relation to each other. The correlation coefficient's values range between -1.0 and 1.0. A perfect positive correlation means that the correlation coefficient is exactly 1. This implies that as one security moves, either up or down, the other security moves in lockstep, in the same direction. A perfect negative correlation means that two assets move in opposite directions, while a zero correlation implies no linear relationship at all.",
   "portfolio.details.analytics.debtEquity": "Debt Equity",
-  "portfolio.details.analytics.debtEquity.infoButton": "The debt-to-equity (D/E) ratio is used to evaluate a company's financial leverage and is calculated by dividing a company’s total liabilities by its shareholder equity.",
   "portfolio.details.analytics.debtEquity.title": "Debt Equity Ratio of your Top 10 Stocks:",
   "portfolio.details.analytics.debtEquity.total": "Debt Equity Ratio of the entire portfolio:",
   "portfolio.details.emptyPortfolio": "This portfolio does not contain any stocks.",
   "portfolio.details.errorMessage": "There has been an error while loading the portfolio details.",
-  "portfolio.details.backtesting": "8. Backtesting",
+  "portfolio.details.backtesting": "Backtesting",
   "portfolio.details.backtesting.start": "Start value",
   "portfolio.details.backtesting.min": "Min value",
   "portfolio.details.backtesting.max": "Max value",
@@ -78,10 +73,12 @@
   "portfolio.details.backtesting.dateHelperText": "Please select a valid time span and try again.",
   "portfolio.details.backtesting.errorMessage": "There was an error while loading the Backtesting data.",
   "portfolio.details.backtesting.updateButton": "Update",
-  "portfolio.details.backtesting.bestChangeInfo": "This was the best annual change over the selected period.",
-  "portfolio.details.backtesting.worstChangeInfo": "This was the worst annual change over the selected period.",
-  "portfolio.details.backtesting.mddInfo": "A maximum drawdown (MDD) is the maximum observed loss from a peak to a trough of a portfolio, before a new peak is attained. Maximum drawdown is an indicator of downside risk over a specified time period.",
-  "portfolio.details.backtesting.cagrInfo": "Compound annual growth rate (CAGR) is the rate of return that would be required for an investment to grow from its beginning balance to its ending balance, assuming the profits were reinvested at the end of each year of the investment’s lifespan.",
+  "portfolio.details.backtesting.bestChangeDescription": "This is a placeholder description for bestChange (translation key)",
+  "portfolio.details.backtesting.worstChangeDescription": "This is a placeholder description for worstChange (translation key)",
+  "portfolio.details.backtesting.mddDescription": "This is a placeholder description for mdd (translation key)",
+  "portfolio.details.backtesting.standardDeviationDescription": "This is a placeholder description for standardDeviation (translation key)",
+  "portfolio.details.backtesting.sharpeRatioDescription": "This is a placeholder description for sharpeRatio(translation key)",
+  "portfolio.details.backtesting.cagrDescription": "This is a placeholder description for cagr (translation key)",
   "cancel": "Cancel",
   "submit": "Submit",
   "shell.email": "Email",
@@ -202,19 +199,21 @@
   "analyser.details.RiskHeader": "3. Risks",
   "analyser.details.Volatility.BetaFactor": "Beta Faktor: ",
   "analyser.details.Volatility.BetaFactor.infoButton": "Beta measures the expected move in a stock relative to movements in the overall market. A beta greater than 1.0 suggests that the stock is more volatile than the broader market, and a beta less than 1.0 indicates a stock with lower volatility.",
+  "analyser.details.Volatility.BetaFactor.ErrorMessage": " doesn't share Beta Faktor.",
   "analyser.details.Volatility.SharpeRatio": "Sharpe Ratio: ",
   "analyser.details.Volatility.SharpeRatio.infoButton": "The Sharpe ratio adjusts a portfolio’s past performance—or expected future performance—for the excess risk that was taken by the investor. A high Sharpe ratio is good when compared to similar portfolios or funds with lower returns.",
   "analyser.details.Volatility.TreynorRatio": "Treynor Ratio: ",
   "analyser.details.Volatility.TreynorRatio.infoButton": "The Treynor ratio is a risk/return measure that allows investors to adjust a portfolio's returns for systematic risk. A higher Treynor ratio result means a portfolio is a more suitable investment.",
-  "analyser.details.Volatility.VolatilityChart": "Volatility Chart",
+  "analyser.details.Volatility.VolatilityChart": "Volatility analysis",
   "analyser.details.Volatility.CompanyShare": "Company share compared to the overall market over benchmark",
-  "analyser.details.Leverage.DebtLevel": "Debt Level: ",
-  "analyser.details.Leverage.DebtLevel.infoButton": "Debt Level information",
+  "analyser.details.Leverage.DebtLevel": "Debt Ratio: ",
+  "analyser.details.Leverage.DebtLevel.infoButton": "Debt Ratio information",
   "analyser.details.Leverage.DebtCoverage": "Debt Coverage by operating cash flow: ",
   "analyser.details.Leverage.DebtCoverage.infoButton": "Debt Coverage by operating cash flow information",
   "analyser.details.Leverage.InterestCoverage": "Interest Coverage: ",
   "analyser.details.Leverage.InterestCoverage.infoButton": "Interest Coverage information",
-  "analyser.details.Leverage.DebtDevelopment": "Debt Development: ",
+  "analyser.details.Leverage.DebtDevelopment": "Debt to Equity Development: ",
+  "analyser.details.Leverage.ErrorMessage": " doesn't share Debt Level.",
   "stock.symbol": "Symbol",
   "stock.name": "Company",
   "stock.lastPrice": "Last Price",
