--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -197,6 +197,7 @@
   "analyser.details.DividendPayoutRatio": "Dividend Payout Ratio",
   "analyser.details.NextDate": "Next Date:",
   "analyser.details.RiskHeader": "3. Risks",
+  "analyser.details.Volatility": "3.1 Volatility ",
   "analyser.details.Volatility.BetaFactor": "Beta Faktor: ",
   "analyser.details.Volatility.BetaFactor.infoButton": "Beta measures the expected move in a stock relative to movements in the overall market. A beta greater than 1.0 suggests that the stock is more volatile than the broader market, and a beta less than 1.0 indicates a stock with lower volatility.",
   "analyser.details.Volatility.BetaFactor.ErrorMessage": " doesn't share Beta Faktor.",
@@ -205,11 +206,12 @@
   "analyser.details.Volatility.TreynorRatio": "Treynor Ratio: ",
   "analyser.details.Volatility.TreynorRatio.infoButton": "The Treynor ratio is a risk/return measure that allows investors to adjust a portfolio's returns for systematic risk. A higher Treynor ratio result means a portfolio is a more suitable investment.",
   "analyser.details.Volatility.VolatilityChart": "Volatility analysis",
+  "analyser.details.Volatility.VolatilityChart.infoButton": "Volatility analysis over market value",
   "analyser.details.Volatility.CompanyShare": "Company share compared to the overall market over benchmark",
+  "analyser.details.Volatility.CompanyShare.infoButton": "Company share compared to the overall market over benchmark is the company volatality over market avarage.",
+  "analyser.details.Leverage": "3.2 Debt and Equity Analysis ",
   "analyser.details.Leverage.DebtLevel": "Debt Ratio: ",
   "analyser.details.Leverage.DebtLevel.infoButton": "Debt Ratio information",
-  "analyser.details.Leverage.DebtCoverage": "Debt Coverage by operating cash flow: ",
-  "analyser.details.Leverage.DebtCoverage.infoButton": "Debt Coverage by operating cash flow information",
   "analyser.details.Leverage.InterestCoverage": "Interest Coverage: ",
   "analyser.details.Leverage.InterestCoverage.infoButton": "Interest Coverage information",
   "analyser.details.Leverage.DebtDevelopment": "Debt to Equity Development: ",
