Feat: localized strings (#310)
* feat: localized strings #117

* feat: localized strings

* run prettier

* feat: added footer tests

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -86,9 +86,12 @@
   "portfolio.performance.errorMessage": "Loading portfolio performance failed.",
   "cancel": "Cancel",
   "submit": "Submit",
+  "shell.home": "Home",
+  "shell.academy": "Academy",
   "shell.email": "Email",
   "shell.password": "Password",
   "shell.login": "Login",
+  "shell.logout": "Logout",
   "shell.register": "Register",
   "shell.confirm": "Confirm your email-address",
   "shell.confirmPassword": "Confirm your password",
@@ -107,6 +110,10 @@
   "shell.message.confirmationEmail": "<typography>We sent you an email with a confirmation link.<break/>This could take a few minutes.<break/>Please confirm your email-address by clicking on the link.</typography>",
   "shell.message.resendEmail": "The confirmation email was re-send.",
   "shell.message.resend": "To re-sent the email click ",
+  "shell.message.welcome": "Welcome to Milou!",
+  "shell.message.registered": "You are registered.",
+  "shell.message.welcome.login": "Welcome back!",
+  "shell.message.login": "You are logged in.",
   "error.invalidEmail": "Invalid email address.",
   "error.invalidPassword": "Invalid password.",
   "error.invalidEmailOrPassword": "The given email-address or password were not correct.",
@@ -177,6 +184,7 @@
   "error.action.retry": "Retry",
   "error.action.login": "Back to login",
   "error.action.back": "Go back",
+  "analyser": "Analyser",
   "analyser.dashboard.headerText": "Analyze Stocks and ETFs within different categories",
   "analyser.dashboard.title": "Stocks",
   "analyser.dashboard.errorMessage": "There has been an error while loading your stocks.",
@@ -275,5 +283,10 @@
   "company.sharesFloat": "Shares Float",
   "info.mc": "The total money invested in the company from all sharesholder",
   "info.50dayMovingAverage": "Moving average of the stock price in the last 50 days",
-  "info.sharesFloat": "The number of shares currently circulating on the market"
+  "info.sharesFloat": "The number of shares currently circulating on the market",
+  "footer.aboutUs": "About us",
+  "footer.mobileApp": "Mobile App",
+  "footer.privacy": "Privacy Policy",
+  "footer.imprint": "Imprint",
+  "footer.copyright": "© Photo, Inc. 2019. We love our users!"
 }
