added portfolio average with different color to DetailsAnalyticsDebtEquityBar.tsx and added rounding to 4 digits after comma for equity bar

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,5 +1,6 @@
 {
   "portfolio": "Portfolio",
+  "portfolio.portfolioAverage": "Portfolio Average",
   "portfolio.details.editPortfolio": "Edit Portfolio",
   "portfolio.details.cannotEditPortfolio": "Cannot edit real portfolio",
   "portfolio.details.summaryHeader": "Summary",
