--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -154,12 +154,13 @@
   "portfolio.dialog.create.title": "New virtual portfolio",
   "portfolio.dialog.create.text": "Enter a name for the new virtual portfolio.",
   "portfolio.dialog.rename.title": "Rename Portfolio",
-  "portfolio.dialog.rename.text": "Enter a new name for the portfolio <portfolioName>{{name}}</portfolioName>.",
+  "portfolio.dialog.rename.text": "Enter a new name for the portfolio:",
   "portfolio.dialog.duplicate.title": "Duplicate Portfolio",
-  "portfolio.dialog.duplicate.text": "Enter a name for the copy of the portfolio <portfolioName>{{name}}</portfolioName>.",
+  "portfolio.dialog.duplicate.text": "Enter a name for the copy of the portfolio: ",
   "portfolio.dialog.duplicate.defaultName": "Copy of {{name}}",
   "portfolio.dialog.delete.title": "Delete Portfolio",
-  "portfolio.dialog.delete.text": "You are about to delete the portfolio <portfolioName>{{name}}</portfolioName>. This action cannot be undone.",
+  "portfolio.dialog.delete.text": "You are about to delete the portfolio ",
+  "portfolio.dialog.delete.warning": "This action cannot be undone.",
   "error.message.default": "An error has occurred.",
   "error.title.AUTH_USER_NOT_LOGGED_IN": "Not logged in",
   "error.message.AUTH_USER_NOT_LOGGED_IN": "You are currently not logged in. Please log in or create an account.",
