--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -94,6 +94,9 @@
   "shell.login": "Login",
   "shell.logout": "Logout",
   "shell.register": "Register",
+  "shell.bank.add.dialog.headline": "Go to the webform and enter your data",
+  "shell.bank.add.dialog.subheadline": "Make sure to check the X checkbox",
+  "shell.bank.add.dialog.toWebform": "To webform",
   "shell.bank.connection.error": "Failed to get Bank connections",
   "shell.bank.search.enter": "Enter bankname or BIC",
   "shell.confirm": "Confirm your email-address",
