add update banks button

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -289,7 +289,8 @@
   "shell.profile.account-details.delete-dialog.description": "Deleting your account is irreversible. All your data will be deleted!",
   "shell.profile.account-details.delete-dialog.ok": "OK",
   "shell.profile.account-details.delete-dialog.cancel": "Cancel",
-  "shell.profile.account-details.add-bankconnection": "Add bank connection",
+  "shell.profile.account-details.add-bankconnection": "Add bank",
+  "shell.profile.account-details.update-bankconnection": "Update banks",
   "company.website": "Website",
   "company.mc": "Market Capitalization",
   "company.exchange": "Exchange",
