--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -278,6 +278,7 @@
   "analyser.details.DividendPayoutRatio.infoButton": "The proportion of earnings paid out as dividends to shareholders, typically expressed as a percentage. If a company pays out some of its earnings as dividends, the remaining portion is retained by the business.",
   "analyser.details.NextDate.infoButton": "The actual day when a company pays its eligible shareholders dividends.",
   "shell.profile.profile-header": "Profile",
+  "shell.profile.profile-subheader": "View and edit all your profile information",
   "shell.profile.account-details.header": "Account Details",
   "shell.profile.account-details.email": "Email",
   "shell.profile.account-details.first-name": "First Name",
