Add translation key for show more Replace text of translation key for show more Remove unneeded imports in Position Card component

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -30,6 +30,7 @@
   "portfolio.details.warnings.currency0": "Very low currency diversification",
   "portfolio.details.warnings.currency1": "Low currency diversification",
   "portfolio.details.positions": "Positions",
+  "portfolio.details.positions.showMore": "Show More",
   "portfolio.details.countries": "Countries",
   "portfolio.details.segments": "Segments",
   "portfolio.details.currencies": "Currencies",
