risk area changed & i buttons fixed

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -224,12 +224,13 @@
   "analyser.details.Volatility.TreynorRatio": "Treynor Ratio: ",
   "analyser.details.Volatility.TreynorRatio.infoButton": "The Treynor ratio is a risk/return measure that allows investors to adjust a portfolio's returns for systematic risk. A higher Treynor ratio result means a portfolio is a more suitable investment.",
   "analyser.details.Volatility.VolatilityChart": "Volatility analysis",
-  "analyser.details.Volatility.VolatilityChart.infoButton": "Volatility analysis over market value",
+  "analyser.details.Volatility.VolatilityChart.infoButton": "Volatility analysis over market value is low if it is green and high if it is red.",
   "analyser.details.Volatility.CompanyShare": "Company share compared to the overall market over benchmark",
   "analyser.details.Volatility.CompanyShare.infoButton": "Company share compared to the overall market over benchmark is the company volatality over market avarage.",
   "analyser.details.Leverage": "3.2 Debt and Equity Analysis ",
   "analyser.details.Leverage.DebtLevel": "Debt Ratio: ",
   "analyser.details.Leverage.DebtLevel.infoButton": "Debt Ratio information",
+  "analyser.details.Leverage.DebtLevelYAxis": "Debt and Equity Values",
   "analyser.details.Leverage.InterestCoverage": "Interest Coverage: ",
   "analyser.details.Leverage.InterestCoverage.infoButton": "Interest Coverage information",
   "analyser.details.Leverage.DebtDevelopment": "Debt to Equity Development: ",
