Feat/some fix (#373)
some minor fixes

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -265,7 +265,7 @@
   "stock.fullTimeEmployees": "Number of Employees",
   "stock.address": "Address",
   "stock.assembly": "Next Shareholder's Assembly",
-  "stock.50dayMovingAverage": "50 Days Moving Average",
+  "stock.per52WeekLow": "Lowest Price in Last 52 weeks",
   "analyser.detail.keyfigure.PER.title": "Price to Earnings Ratio",
   "analyser.detail.keyfigure.PER.definition": "The P/E ratio relates a company's share price to its earnings per share. A high P/E ratio could mean that a company's stock is over-valued, or else that investors are expecting high growth rates in the future.",
   "analyser.detail.keyfigure.PBR.title": "Price to Book Ratio",
@@ -300,10 +300,8 @@
   "company.website": "Website",
   "company.mc": "Market Capitalization",
   "company.exchange": "Exchange",
-  "company.sharesFloat": "Shares Float",
+  "company.per52WeekHigh": "Highest Price in Last 52 Weeks",
   "info.mc": "The total money invested in the company from all sharesholder",
-  "info.50dayMovingAverage": "Moving average of the stock price in the last 50 days",
-  "info.sharesFloat": "The number of shares currently circulating on the market",
   "footer.aboutUs": "About us",
   "footer.privacy": "Privacy Policy",
   "footer.imprint": "Imprint"
