Handle missing dividends data for portfolio.
* Display 'unknown' if next dividend payout is not known.
* Hide dividends section if dividend data is missing.
* Fix type of DividendLineChart.Series.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -304,5 +304,6 @@
   "info.mc": "The total money invested in the company from all sharesholder",
   "footer.aboutUs": "About us",
   "footer.privacy": "Privacy Policy",
-  "footer.imprint": "Imprint"
+  "footer.imprint": "Imprint",
+  "unknown": "unknown"
 }
