fix div and stock

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -256,7 +256,7 @@
   "stock.analystsTarget": "Analysts Target",
   "stock.valuation": "Valuation P/E",
   "stock.growth": "Growth",
-  "stock.div": "Div Yield",
+  "stock.div": "Div / Share",
   "stock.industry": "Industry",
   "stock.country": "Country",
   "stock.currency": "Currency",
@@ -268,6 +268,9 @@
   "stock.assembly": "Next Shareholder's Assembly",
   "stock.per52WeekLow": "52 Weeks Low",
   "stock.per52WeekHigh": "52 Weeks High",
+  "stock.sell": "Sell",
+  "stock.hold": "Hold",
+  "stock.buy": "Buy",
   "analyser.detail.keyfigure.PER.title": "Price to Earnings Ratio",
   "analyser.detail.keyfigure.PER.definition": "The P/E ratio relates a company's share price to its earnings per share. A high P/E ratio could mean that a company's stock is over-valued, or else that investors are expecting high growth rates in the future.",
   "analyser.detail.keyfigure.PBR.title": "Price to Book Ratio",
@@ -305,6 +308,7 @@
   "info.mc": "The total money invested in the company from all shareholders",
   "info.per52WeekHigh": "highest price in the last 52 Weeks",
   "info.per52WeekLow": "Lowest price in  the last 52 weeks",
+  "info.div": "Dividend paid out per single share",
   "footer.aboutUs": "About us",
   "footer.privacy": "Privacy Policy",
   "footer.imprint": "Imprint",
