--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -288,6 +288,7 @@
   "analyser.details.DividendYield.infoButton": "It is the amount of money a company pays shareholders for owning a share of its stock divided by its current stock price. However, higher dividend yields do not always indicate attractive investment opportunities because the dividend yield of a stock may be elevated as the result of a declining stock price.",
   "analyser.details.DividendPayoutRatio.infoButton": "The proportion of earnings paid out as dividends to shareholders, typically expressed as a percentage. If a company pays out some of its earnings as dividends, the remaining portion is retained by the business.",
   "analyser.details.NextDate.infoButton": "The actual day when a company pays its eligible shareholders dividends.",
+  "analyser.details.lastUpdated": "Last updated",
   "shell.profile.profile-header": "Profile",
   "shell.profile.profile-subheader": "View and edit all your profile information",
   "shell.profile.account-details.header": "Account Details",
