--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -223,7 +223,6 @@
   "analyser.details.DividendsHistory": "Dividends History",
   "analyser.details.DividendYield": "Dividend Yield",
   "analyser.details.DividendPayoutRatio": "Dividend Payout Ratio",
-  "analyser.details.NextDate": "Next Date:",
   "analyser.details.RiskHeader": "3. Risks",
   "analyser.details.Volatility": "3.1 Volatility ",
   "analyser.details.Volatility.BetaFactor": "Beta Faktor: ",
@@ -289,6 +288,8 @@
   "analyser.details.DividendYield.infoButton": "It is the amount of money a company pays shareholders for owning a share of its stock divided by its current stock price. However, higher dividend yields do not always indicate attractive investment opportunities because the dividend yield of a stock may be elevated as the result of a declining stock price.",
   "analyser.details.DividendPayoutRatio.infoButton": "The proportion of earnings paid out as dividends to shareholders, typically expressed as a percentage. If a company pays out some of its earnings as dividends, the remaining portion is retained by the business.",
   "analyser.details.NextDate.infoButton": "The actual day when a company pays its eligible shareholders dividends.",
+  "analyser.details.noDividendPlanned": "No planned dividend",
+  "analyser.details.noDividendPayed": "No dividend was paid in the last fiscal year",
   "analyser.details.lastUpdated": "Last updated",
   "shell.profile.profile-header": "Profile",
   "shell.profile.profile-subheader": "View and edit all your profile information",
