Feat/handle unknown stocks (#397)
* preliminary structure of MissingDataMessage
* fixed mocks
* added portfolioWithoutMissingData for some sub components and added for todos where this is not possible
* added check for empty risk
* added check for just id inside key figures entry
*added handling of missing performance data in positions
* creates new component NoInfoAvailable.tsx
* added check for DetailsMainAnalytics.tsx
* added more meaningful error for Backtesting
* changed translation key
* implemented more checks whether Risk info is available
* added missing data check for summary diversification section
* Added styling to 'missing data' messages.
* Extra text alignment in position cards.

Co-authored-by: ge75bip <julianbouchard1@gmail.com>

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -2,12 +2,15 @@
   "portfolio": "Portfolio",
   "source.investopedia": "Source: investopedia.com",
   "portfolio.portfolioAverage": "Portfolio Average",
+  "portfolio.details.missingDataMessage": "For some of your stocks there is data missing in our database. Only the amount holding and the value of these stocks can be displayed. Stocks affected: ",
   "portfolio.details.editPortfolio": "Edit Portfolio",
   "portfolio.details.cannotEditPortfolio": "Cannot edit real portfolio",
+  "portfolio.details.summary.missingDiversification": "There is no diversification info available for your stocks.",
   "portfolio.details.summaryHeader": "1. Summary",
   "portfolio.details.stockChartSeries": "Total Performance",
   "portfolio.dialog.edit.title": "Edit portfolio positions",
   "portfolio.dialog.edit.text": "Here you can adjust the positions of your portfolio.",
+  "portfolio.details.missingPerformance": "No performance data available.",
   "portfolio.details.stock": "Stock",
   "portfolio.details.price": "Price",
   "portfolio.details.amount": "Amount",
@@ -172,6 +175,8 @@
   "portfolio.dialog.delete.text": "You are about to delete the portfolio ",
   "portfolio.dialog.delete.warning": "This action cannot be undone.",
   "error.message.default": "An error has occurred.",
+  "error.title.NO_BACKTESTING_DATA": "No Backtesting data available.",
+  "error.message.NO_BACKTESTING_DATA": "There is currently no information for your stocks in our database.",
   "error.title.AUTH_USER_NOT_LOGGED_IN": "Not logged in",
   "error.message.AUTH_USER_NOT_LOGGED_IN": "You are currently not logged in. Please log in or create an account.",
   "error.title.AUTH_TOKEN_INVALID": "Authentication failure",
