--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -176,6 +176,8 @@
   "portfolio.dialog.delete.text": "You are about to delete the portfolio ",
   "portfolio.dialog.delete.warning": "This action cannot be undone.",
   "error.message.default": "An error has occurred.",
+  "error.title.INVALID_CORRELATION": "Invalid Correlation Information.",
+  "error.message.INVALID_CORRELATION": "It appears our database has invalid information about the correlations of your stocks.",
   "error.title.NO_BACKTESTING_DATA": "No Backtesting data available.",
   "error.message.NO_BACKTESTING_DATA": "There is currently no information for your stocks in our database.",
   "error.title.AUTH_USER_NOT_LOGGED_IN": "Not logged in",
