feat: add bank test

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -112,8 +112,8 @@
   "shell.confirm": "Confirm your email-address",
   "shell.confirmPassword": "Confirm your password",
   "shell.message.forgotPassword": "Forgot password?",
-  "shell.message.noAccount": "You have no account? Then register <0>hier</0>.",
-  "shell.question.haveAccount": "You already have an account? Then log in <0>hier</0>.",
+  "shell.message.noAccount": "You have no account? Then register <0>here</0>.",
+  "shell.question.haveAccount": "You already have an account? Then log in <0>here</0>.",
   "shell.disclaimer": "By registering to Milou you are agreeing to our <0>privacy policy</0>.",
   "shell.reset.forgot": "Please enter your email so we can send you a reset link",
   "shell.reset.submit": "Send link",
